Nodegroup user count increased when file saved in edit group mode #75680

Closed
opened 2020-04-13 13:56:26 +02:00 by Jean-Yves Grosbeau · 9 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-11 15:16, hash: 85de07e64c
Worked: (newest version of Blender that worked as expected)

Short description of error
If you close a file with a node group being edited, the usercount gets messy.

Exact steps for others to reproduce the error

  1. On the default blender file go to Shading workspace
  2. Select Principled BSDF and create group (Ctrl G)
  3. Save file
  4. Close file
  5. Open file

or

  1. Open attached file

Finally, exit the group.
You see the nodegroup user count is 2 instead of 1

NodeGroupBadUserCount.blend

thank!

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-11 15:16, hash: `85de07e64c` Worked: (newest version of Blender that worked as expected) **Short description of error** If you close a file with a node group being edited, the usercount gets messy. **Exact steps for others to reproduce the error** 1. On the default blender file go to Shading workspace 2. Select `Principled BSDF` and create group (Ctrl G) 3. Save file 4. Close file 5. Open file or 1. Open attached file Finally, exit the group. You see the nodegroup user count is 2 instead of 1 [NodeGroupBadUserCount.blend](https://archive.blender.org/developer/F8468924/NodeGroupBadUserCount.blend) thank!

Added subscriber: @Jean-YvesGrosbeau

Added subscriber: @Jean-YvesGrosbeau

Same issue with blender 2.82 and 2.79.

Same issue with blender 2.82 and 2.79.

Added subscribers: @mont29, @mano-wii

Added subscribers: @mont29, @mano-wii

A fix was recently committed in this area.
Maybe this is a remnant of an old file with the problem?
Anyway there should be a way to remap the users.

@mont29, I don't know how to debug usercount. Is there really a bug here?

A fix was recently committed in this area. Maybe this is a remnant of an old file with the problem? Anyway there should be a way to remap the users. @mont29, I don't know how to debug usercount. Is there really a bug here?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

After rereading the "short" description I realized that the problem is reproducible in any file. So it's a bug.

After rereading the "short" description I realized that the problem is reproducible in any file. So it's a bug.
Bastien Montagne self-assigned this 2020-04-16 17:05:02 +02:00

sigh... So basically node editor is completely schizophrenic, some part of it consider itself a real ID user, others just a 'user one' one...

Luckily this does not seem to hard to fix, although it may be difficult to ensure all cases are now properly handled, but this we can easily iterate-fix if needed.

*sigh*... So basically node editor is completely schizophrenic, some part of it consider itself a real ID user, others just a 'user one' one... Luckily this does not seem to hard to fix, although it may be difficult to ensure all cases are now properly handled, but this we can easily iterate-fix if needed.

This issue was referenced by e9bf624a49

This issue was referenced by e9bf624a498a4f0074374740737d47c5df7fd87d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75680
No description provided.